# Sequential-ISNE

./: .gitignore  DATASET_PREPARATION_GUIDE.md  FINAL_STATUS.md  PRESENTATION_READY.md  README.md  RESEARCH_SUMMARY.md  RESULTS_SUMMARY.md  SETUP.md  WANDB_INTEGRATION.md  academic_test.py  config.yaml  create_enhanced_dataset.py  demo.py  demo_complete_system.py  directory_graph.py  documentation_enhancement_plan.md  enhance_dataset_with_theory.py  full_academic_training.py  full_scale_test.py  pyproject.toml  requirements.txt  sequential_isne_architecture.md  setup_env.py  simple_demo.py  test_normalization.py  train_and_log_model.py  train_with_normalized_data.py  validate_complete_pipeline.py  validate_full_pipeline.py  validate_pdf_processing.py
experiments/: complete_validation_results.json  end_to_end_validation.py  normalized_data_test.json  pdf_validation_results.json  sequential-isne-demo-20250617-113225_results.json  simple_validation.py
experiments/hypothesis_validation/: validate_streaming_hypothesis.py
experiments/normalized_training/: normalized-training-20250616-185033_results.json
experiments/results/: simple_validation_results.json
experiments/trained_models/: sequential_isne_full-pipeline-20250616-130541.json  sequential_isne_full-pipeline-20250616-132558.json  sequential_isne_full-pipeline-20250616-132618.json  sequential_isne_full-pipeline-20250616-132715.json  sequential_isne_full-pipeline-20250616-133002.json  sequential_isne_full-pipeline-20250616-175106.json  sequential_isne_full-pipeline-20250616-180918.json
output/: hypothesis_validation_results.json
src/: __init__.py  chunker.py  cpu_embedder.py  data_normalizer.py  directory_graph.py  doc_types.py  document_processor.py  embedder.py  embeddings.py  enhanced_hierarchical_processor.py  example_usage.py  file_processor.py  hierarchical_processor.py  integrated_pipeline.py  pipeline.py  real_embedding_provider.py  sequential_isne.py  simple_document_processor.py  streaming_processor.py  test_pipeline.py
wandb/: latest-run
wandb/offline-run-20250616_174744-vmxv6tqi/: run-vmxv6tqi.wandb
wandb/run-20250616_160413-2mqg2nih/: run-2mqg2nih.wandb
wandb/run-20250616_175034-2kw6b1rc/: run-2kw6b1rc.wandb
wandb/run-20250616_175052-2euv9koo/: run-2euv9koo.wandb
wandb/run-20250616_175107-fclna04w/: run-fclna04w.wandb
wandb/run-20250616_180918-n9xcsnxq/: run-n9xcsnxq.wandb
wandb/run-20250616_183011-94guvi2a/: run-94guvi2a.wandb
wandb/run-20250616_183116-6mlc0po8/: run-6mlc0po8.wandb
wandb/run-20250616_183219-4ua1r8jg/: run-4ua1r8jg.wandb
wandb/run-20250616_184439-zavj143b/: run-zavj143b.wandb
wandb/run-20250616_184515-sraib5q5/: run-sraib5q5.wandb
wandb/run-20250616_185033-lasojll9/: run-lasojll9.wandb
wandb/run-20250616_191829-r6ovpl15/: run-r6ovpl15.wandb
wandb/run-20250616_194119-4t92grja/: run-4t92grja.wandb
(+48 files in other folders)
